--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="block Cgrey">
             <div class="block-body">
                 <h2>Hi, I am Rodrigo Aldana-López</h2>
-                <p class="black-text">I am currently an Autonomous Systems Engineer at the Multi-Agent Autonomous Systems Lab at <a class="begin-block" href="http://www.intel.com/content/www/us/en/research/intel-research.html" >Intel Labs</a>. My research focuses on enabling aerial systems to autonomously navigate and coordinate in complex environments. I also finished a Masters in <a class="begin-block" href="http://www.cinvestavgdl-control.org.mx/index.php/en/">Automatic Control</a> in 2015 at <a class="begin-block" href="http://www.gdl.cinvestav.mx/">Cinvestav—IPN</a>.</p>
+                <p class="black-text">I am currently Ph.D. student at the University of Zaragoza. <a class="begin-block" href="http://www.intel.com/content/www/us/en/research/intel-research.html" >Intel Labs</a>. My research focuses on enabling aerial systems to autonomously navigate and coordinate in complex environments. I also finished a Masters in <a class="begin-block" href="http://www.cinvestavgdl-control.org.mx/index.php/en/">Automatic Control</a> in 2015 at <a class="begin-block" href="http://www.gdl.cinvestav.mx/">Cinvestav—IPN</a>.</p>
                 <p class="black-text">Before that, I finished my Engineer at <a class="begin-block" href=" http://www.ceti.mx/">CETI</a> in Mechatronics with major in Robotics.</p>
                 <center>
                 <a href="mailto:lecampos@gdl.cinvestav.mx">
