--- a/index.html
+++ b/index.html
@@ -86,8 +86,11 @@
                      </div>
                   </div>
                </div>
-               <div class="col col-12">
-                  <div class="col col-7">
+
+
+
+               <div class="col col-9">
+                  <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 class="align-top-right">
@@ -96,7 +99,43 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col col-5">
+                  <div class="col col-6">
+                     <div class="block" style="background-image:url(assets/2.png)">
+                        <div class="block-body height-2">
+                           <h2 class="align-top-right">
+                              <a class="custom"  href="mexone.html">MexOne</a>
+                           </h2>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col col-6">
+                     <div class="block" style="background-image:url(assets/2.png)">
+                        <div class="block-body height-2">
+                           <h2 class="align-top-right">
+                              <a class="custom"  href="mexone.html">MexOne</a>
+                           </h2>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col col-6">
+                     <div class="block" style="background-image:url(assets/2.png)">
+                        <div class="block-body height-2">
+                           <h2 class="align-top-right">
+                              <a class="custom"  href="mexone.html">MexOne</a>
+                           </h2>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col col-6">
+                     <div class="block" style="background-image:url(assets/2.png)">
+                        <div class="block-body height-2">
+                           <h2 class="align-top-right">
+                              <a class="custom"  href="mexone.html">MexOne</a>
+                           </h2>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col col-6">
                      <div class="block" style="background-image:url(assets/2.png)">
                         <div class="block-body height-2">
                            <h2 class="align-top-right">
@@ -106,7 +145,9 @@
                      </div>
                   </div>
                </div>
-               <div class="col col-9">
+               
+
+	       <div class="col col-9">
                   <div class="col col-3">
                      <div class="block Cpurple">
                         <div class="block-body height-1">
@@ -134,6 +175,7 @@
                         </div>
                      </div>
                   </div>
+
                   <div class="col col-3">
                      <div class="block Cred">
                         <div class="block-body height-1">
@@ -161,7 +203,9 @@
                         </div>
                      </div>
                   </div>
+
                </div>
+
             </div>
          </div>
       </div>
