--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
 
 
 
-               <div class="col col-9">
-                  <div class="col col-6">
+               <div class="col col-12">
+                  
+		  <div class="col col-8">
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 class="align-top-right">
@@ -99,51 +100,17 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/2.png)">
+
+		  <div class="col col-3">
+                     <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 class="align-top-right">
-                              <a class="custom"  href="mexone.html">MexOne</a>
+                              <a class="custom"  href="quads.html">Multirotors</a>
                            </h2>
                         </div>
                      </div>
                   </div>
-                  <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/2.png)">
-                        <div class="block-body height-2">
-                           <h2 class="align-top-right">
-                              <a class="custom"  href="mexone.html">MexOne</a>
-                           </h2>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/2.png)">
-                        <div class="block-body height-2">
-                           <h2 class="align-top-right">
-                              <a class="custom"  href="mexone.html">MexOne</a>
-                           </h2>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/2.png)">
-                        <div class="block-body height-2">
-                           <h2 class="align-top-right">
-                              <a class="custom"  href="mexone.html">MexOne</a>
-                           </h2>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/2.png)">
-                        <div class="block-body height-2">
-                           <h2 class="align-top-right">
-                              <a class="custom"  href="mexone.html">MexOne</a>
-                           </h2>
-                        </div>
-                     </div>
-                  </div>
+  
                </div>
                
 
