--- a/index.html
+++ b/index.html
@@ -87,26 +87,91 @@
                   </div>
                </div>
                <div class="col col-12">
-                  <div class="col col-8">
+                  <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 class="align-top-right">
-                              <a class="custom"  href="quads.html">Multirotors</a>
+                              <a class="custom"  href="quads.html">Multirotors1</a>
                            </h2>
                         </div>
                      </div>
                   </div>
-                  <div class="col col-3">
+                  <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 class="align-top-right">
-                              <a class="custom"  href="quads.html">Multirotors</a>
+                              <a class="custom"  href="quads.html">Multirotors2</a>
+                           </h2>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col col-6">
+                     <div class="block" style="background-image:url(assets/1.png)">
+                        <div class="block-body height-2">
+                           <h2 class="align-top-right">
+                              <a class="custom"  href="quads.html">Multirotors3</a>
+                           </h2>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col col-6">
+                     <div class="block" style="background-image:url(assets/1.png)">
+                        <div class="block-body height-2">
+                           <h2 class="align-top-right">
+                              <a class="custom"  href="quads.html">Multirotors4</a>
+                           </h2>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col col-6">
+                     <div class="block" style="background-image:url(assets/1.png)">
+                        <div class="block-body height-2">
+                           <h2 class="align-top-right">
+                              <a class="custom"  href="quads.html">Multirotors5</a>
+                           </h2>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col col-6">
+                     <div class="block" style="background-image:url(assets/1.png)">
+                        <div class="block-body height-2">
+                           <h2 class="align-top-right">
+                              <a class="custom"  href="quads.html">Multirotors6</a>
                            </h2>
                         </div>
                      </div>
                   </div>
                </div>
 
+			   <div class="col col-12">
+                  <div class="col col-4">
+                     <div class="block" style="background-image:url(assets/1.png)">
+                        <div class="block-body height-2">
+                           <h2 class="align-top-right">
+                              <a class="custom"  href="quads.html">Multirotors7</a>
+                           </h2>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col col-4">
+                     <div class="block" style="background-image:url(assets/1.png)">
+                        <div class="block-body height-2">
+                           <h2 class="align-top-right">
+                              <a class="custom"  href="quads.html">Multirotors8</a>
+                           </h2>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col col-4">
+                     <div class="block" style="background-image:url(assets/1.png)">
+                        <div class="block-body height-2">
+                           <h2 class="align-top-right">
+                              <a class="custom"  href="quads.html">Multirotors9</a>
+                           </h2>
+                        </div>
+                     </div>
+                  </div>
+               </div>
 
                <div class="col col-9">
                   <div class="col col-3">
