--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
                   </div>
                </div>
                <div class="col col-12">
+				  <div class="col col-12">
+                        <div class="block-body height-2">
+                           PUBLICATIONS
+                        </div>
+                  </div>
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
@@ -171,64 +176,7 @@
                         </div>
                      </div>
                   </div>
-               </div>
-
-               <div class="col col-9">
-                  <div class="col col-3">
-                     <div class="block Cpurple">
-                        <div class="block-body height-1">
-                           <h2>
-                              <a class="post-link blocks" href="carrer.html">Work Experience</a>
-                           </h2>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col col-6">
-                     <div class="block Cgreen">
-                        <div class="block-body height-1">
-                           <h2>
-                              <a class="post-link blocks" href="publications.html">Publications</a>
-                           </h2>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col col-3">
-                     <div class="block Cpurple">
-                        <div class="block-body height-1">
-                           <h2>
-                              <a class="post-link blocks" href="education.html">Education</a>
-                           </h2>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col col-3">
-                     <div class="block Cred">
-                        <div class="block-body height-1">
-                           <h2>
-                              <a class="post-link blocks" href="">Resume</a>
-                           </h2>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col col-3">
-                     <div class="block Cred">
-                        <div class="block-body height-1">
-                           <h2>
-                              <a class="post-link blocks" href="several.html">Selected Projects</a>
-                           </h2>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col col-6">
-                     <div class="block Cgreen">
-                        <div class="block-body height-1">
-                           <h2>
-                              <a class="post-link blocks" href="">Additional Information</a>
-                           </h2>
-                        </div>
-                     </div>
-                  </div>
-               </div>
+               </div>              
             </div>
          </div>
       </div>
