--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                </div>
                <div class="col col-12">
 				  <div class="col col-12">
-                        <div class="block-body height-2">
-                           PUBLICATIONS
+                        <div class="block-body height-0">
+                           <h2>PUBLICATIONS</h2>
                         </div>
                   </div>
                   <div class="col col-6">
