--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                <div class="col col-12">
 				  <div class="col col-12">
                         <div class="block-body height-0">
-                           <h2>PUBLICATIONS</h2>
+                           <h2 align="center">PUBLICATIONS</h2>
                         </div>
                   </div>
                   <div class="col col-6">
