--- a/index.html
+++ b/index.html
@@ -63,22 +63,18 @@
                      <div class="block Cgrey">
                         <div class="block-body">
                            <h2>Hi, I am Rodrigo Aldana-López</h2>
-                           <p class="black-text">I am currently Ph.D. student at the University of Zaragoza. <a class="begin-block" href="http://www.intel.com/content/www/us/en/research/intel-research.html" >Intel Labs</a>. My research focuses on enabling aerial systems to autonomously navigate and coordinate in complex environments. I also finished a Masters in <a class="begin-block" href="http://www.cinvestavgdl-control.org.mx/index.php/en/">Automatic Control</a> in 2015 at <a class="begin-block" href="http://www.gdl.cinvestav.mx/">Cinvestav—IPN</a>.</p>
-                           <p class="black-text">Before that, I finished my Engineer at <a class="begin-block" href=" http://www.ceti.mx/">CETI</a> in Mechatronics with major in Robotics.</p>
+                           <p class="black-text">I am currently Ph.D. student at the <a class="begin-block" href="http://diis.unizar.es/en/PhD_eng" >University of Zaragoza.</a> studying the effects and scheduling of perception latency in robotic systems with multiple agents. My interests lie in the intersection between learning, control and information theory. Previously, I worked at the multi-agent autonomous systems laboratory at <a class="begin-block" href="https://www.intel.es/content/www/es/es/research/overview.html" >Intel Labs.</a>. I am very passionate about math related topics in robotics and technology in general. I enjoy discussing and learning new stuff. Feel free to contact me about any of my work, or if you want to discuss something new!
                            <center>
-                              <a href="mailto:lecampos@gdl.cinvestav.mx">
+                              <a href="mailto:rodrigo.aldana.lopez@gmail.com">
                               <img alt="email" src="assets/gmail.png" width="38" height="25">
                               </a>&ensp; &ensp;
-                              <a href="https://www.linkedin.com/in/leo-campos-b97218a1/">
-                              <img alt="linkedin" src="assets/linkedin.png" width="29" height="25">
-                              </a>&ensp; &ensp;
-                              <a href="https://www.researchgate.net/profile/Leobardo_Campos">
+                              <a href="https://www.researchgate.net/profile/Rodrigo-Aldana">
                               <img alt="research_gate" src="assets/research_gate.png" width="27" height="25">
                               </a>&ensp; &ensp;
-                              <a href="https://scholar.google.com/citations?hl=es&user=2pYKbQQAAAAJ">
+                              <a href="https://scholar.google.com/citations?user=mmp6hHQAAAAJ&hl=es">
                               <img alt="google_scholar" src="assets/google_scholar.png" width="37" height="35">
                               </a>&ensp;
-                              <a href="https://github.com/lecampos">
+                              <a href="https://github.com/RodrigoAldana">
                               <img alt="github" src="assets/github.png" width="35" height="30">
                               </a>
                            </center>
@@ -89,14 +85,14 @@
                <div class="col col-12">
 				  <div class="col col-12">
                         <div class="block-body height-0">
-                           <h2 align="center">PUBLICATIONS</h2>
+                           <h2 align="center">PUBLICATIONS BY AREA</h2>
                         </div>
                   </div>
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 class="align-top-right">
-                              <a class="custom"  href="quads.html">Multirotors1</a>
+                              <a class="custom"  href="quads.html">Latency scheduling in perception and control</a>
                            </h2>
                         </div>
                      </div>
@@ -105,7 +101,7 @@
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 class="align-top-right">
-                              <a class="custom"  href="quads.html">Multirotors2</a>
+                              <a class="custom"  href="quads.html">Dynamic consensus in multi-robot systems</a>
                            </h2>
                         </div>
                      </div>
@@ -114,7 +110,7 @@
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 class="align-top-right">
-                              <a class="custom"  href="quads.html">Multirotors3</a>
+                              <a class="custom"  href="quads.html">Multi-rotor motion planning</a>
                            </h2>
                         </div>
                      </div>
@@ -123,7 +119,7 @@
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 class="align-top-right">
-                              <a class="custom"  href="quads.html">Multirotors4</a>
+                              <a class="custom"  href="quads.html">Predefined-time stability: control and differentiation</a>
                            </h2>
                         </div>
                      </div>
@@ -132,7 +128,7 @@
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 class="align-top-right">
-                              <a class="custom"  href="quads.html">Multirotors5</a>
+                              <a class="custom"  href="quads.html">Digital communications</a>
                            </h2>
                         </div>
                      </div>
@@ -141,7 +137,7 @@
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 class="align-top-right">
-                              <a class="custom"  href="quads.html">Multirotors6</a>
+                              <a class="custom"  href="quads.html">Patents</a>
                            </h2>
                         </div>
                      </div>
@@ -149,11 +145,16 @@
                </div>
 
 			   <div class="col col-12">
+			      <div class="col col-12">
+                        <div class="block-body height-0">
+                           <h2 align="center">Trajectory</h2>
+                        </div>
+                  </div>
                   <div class="col col-4">
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 class="align-top-right">
-                              <a class="custom"  href="quads.html">Multirotors7</a>
+                              <a class="custom"  href="quads.html">Work experience</a>
                            </h2>
                         </div>
                      </div>
@@ -162,7 +163,7 @@
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 class="align-top-right">
-                              <a class="custom"  href="quads.html">Multirotors8</a>
+                              <a class="custom"  href="quads.html">Teaching</a>
                            </h2>
                         </div>
                      </div>
@@ -171,7 +172,7 @@
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 class="align-top-right">
-                              <a class="custom"  href="quads.html">Multirotors9</a>
+                              <a class="custom"  href="quads.html">Education</a>
                            </h2>
                         </div>
                      </div>
@@ -195,7 +196,7 @@
                   <div class="hline-w"></div>
                   <p>
                      Rodrigo Aldana-López <br>
-                     leo.campos.macias@gmail.com <br>
+                     rodrigo.aldana.lopez@gmail.com <br>
                   </p>
                </div>
             </div>
