--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
-                           <h2 class="align-top-right">
+                           <h2 align="center">
                               <a class="custom"  href="quads.html">Multi-rotor motion planning</a>
                            </h2>
                         </div>
@@ -118,7 +118,7 @@
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
-                           <h2 class="align-top-right">
+                           <h2 align="center">
                               <a class="custom"  href="quads.html">Predefined-time stability: control and differentiation</a>
                            </h2>
                         </div>
@@ -126,7 +126,7 @@
                   </div>
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-2">
+                        <div align="center">
                            <h2 class="align-top-right">
                               <a class="custom"  href="quads.html">Digital communications</a>
                            </h2>
