--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                </div>
                <div class="col col-12">
 				  <div class="col col-12">
-                        <div class="block-body height-0">
+                        <div class="block-body">
                            <h2 align="center">PUBLICATIONS BY AREA</h2>
                         </div>
                   </div>
