--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                      <div class="block Cgrey">
                         <div class="block-body">
                            <h2>Hi, I am Rodrigo Aldana-López</h2>
-                           <p class="black-text">I am currently Ph.D. student at the <a class="begin-block" href="http://diis.unizar.es/en/PhD_eng" >University of Zaragoza.</a> studying the effects and scheduling of perception latency in robotic systems with multiple agents. My interests lie in the intersection between learning, control and information theory. Previously, I worked at the multi-agent autonomous systems laboratory at <a class="begin-block" href="https://www.intel.es/content/www/es/es/research/overview.html" >Intel Labs.</a>. I am very passionate about math related topics in robotics and technology in general. I enjoy discussing and learning new stuff. Feel free to contact me about any of my work, or if you want to discuss something new!
+                           <p class="black-text">I am a currently Ph.D. student at the <a class="begin-block" href="http://diis.unizar.es/en/PhD_eng" >University of Zaragoza,</a> studying the effects and scheduling of perception latency in robotic systems with multiple agents. My interests lie in the intersection between learning, control and information theory. Previously, I worked at the multi-agent autonomous systems laboratory at <a class="begin-block" href="https://www.intel.es/content/www/es/es/research/overview.html" >Intel Labs.</a> I am very passionate about math-related topics in robotics and technology in general. I enjoy discussing and learning new stuff. Feel free to contact me about any of my work, or if you want to discuss something new!
                            <center>
                               <a href="mailto:rodrigo.aldana.lopez@gmail.com">
                               <img alt="email" src="assets/gmail.png" width="38" height="25">
@@ -91,7 +91,7 @@
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
-                           <h2 class="align-top-right">
+                           <h2 align="center">
                               <a class="custom"  href="quads.html">Latency scheduling in perception and control</a>
                            </h2>
                         </div>
@@ -100,7 +100,7 @@
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
-                           <h2 class="align-top-right">
+                           <h2 align="center">
                               <a class="custom"  href="quads.html">Dynamic consensus in multi-robot systems</a>
                            </h2>
                         </div>
@@ -126,8 +126,8 @@
                   </div>
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div align="center">
-                           <h2 class="align-top-right">
+                        <div class="block-body height-2">
+                           <h2 align="center">
                               <a class="custom"  href="quads.html">Digital communications</a>
                            </h2>
                         </div>
@@ -136,7 +136,7 @@
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
-                           <h2 class="align-top-right">
+                           <h2 align="center">
                               <a class="custom"  href="quads.html">Patents</a>
                            </h2>
                         </div>
