--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
                <div class="col col-12">
 				  <div class="col col-12">
                         <div class="block-body">
-                           <h2 align="center">PUBLICATIONS BY AREA</h2>
+                           <h2 align="center">Publications by area</h2>
                         </div>
                   </div>
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-2">
+                        <div class="block-body height-1">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Latency scheduling in perception and control</a>
                            </h2>
@@ -99,7 +99,7 @@
                   </div>
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-2">
+                        <div class="block-body height-1">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Dynamic consensus in multi-robot systems</a>
                            </h2>
@@ -108,7 +108,7 @@
                   </div>
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-2">
+                        <div class="block-body height-1">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Multi-rotor motion planning</a>
                            </h2>
@@ -117,7 +117,7 @@
                   </div>
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-2">
+                        <div class="block-body height-1">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Predefined-time stability: control and differentiation</a>
                            </h2>
@@ -126,7 +126,7 @@
                   </div>
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-2">
+                        <div class="block-body height-1">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Digital communications</a>
                            </h2>
@@ -135,7 +135,7 @@
                   </div>
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-2">
+                        <div class="block-body height-1">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Patents</a>
                            </h2>
@@ -146,14 +146,14 @@
 
 			   <div class="col col-12">
 			      <div class="col col-12">
-                        <div class="block-body height-0">
+                        <div class="block-body">
                            <h2 align="center">Trajectory</h2>
                         </div>
                   </div>
                   <div class="col col-4">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-2">
-                           <h2 class="align-top-right">
+                        <div class="block-body height-1">
+                           <h2 align="center">
                               <a class="custom"  href="quads.html">Work experience</a>
                            </h2>
                         </div>
@@ -161,8 +161,8 @@
                   </div>
                   <div class="col col-4">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-2">
-                           <h2 class="align-top-right">
+                        <div class="block-body height-1">
+                           <h2 align="center">
                               <a class="custom"  href="quads.html">Teaching</a>
                            </h2>
                         </div>
@@ -170,8 +170,8 @@
                   </div>
                   <div class="col col-4">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-2">
-                           <h2 class="align-top-right">
+                        <div class="block-body height-1">
+                           <h2 align="center">
                               <a class="custom"  href="quads.html">Education</a>
                            </h2>
                         </div>
