--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </div>
                   </div>
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/1.png)">
+                     <div class="block" style="background-image:url(assets/1.png); background-position: center">
                         <div class="block-body height-1">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Latency scheduling in perception and control</a>
