--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                <br><br><br><br><br>
                <div class="col col-12">
                   <div class="col col-3">
-                     <div class="block glass" style="background-image:url(assets/avatar.png)> 
+                     <div class="block glass" style="background-image:url(assets/avatar.png)> <img alt="avatar" src="assets/avatar.png" >
                      </div>
                   </div>
                   <div class="col col-9">
