--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <div class="home">
                <br><br><br><br><br>
                <div class="col col-12">
-				   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/1.png); background-position: center">
+				   <div class="col col-3">
+                     <div class="block" style="background-image:url(assets/avatar.png); background-position: center">
                         <div class="block-body height-1">
                         </div>
                      </div>
