--- a/index.html
+++ b/index.html
@@ -55,10 +55,8 @@
             <div class="home">
                <br><br><br><br><br>
                <div class="col col-12">
-				   <div class="col col-3">
-                     <div class="block" style="background-image:url(assets/avatar.png); background-position: center">
-                        <div class="block-body height-1">
-                        </div>
+                  <div class="col col-3">
+                     <div class="block glass"> <img alt="avatar" src="assets/avatar.png" >
                      </div>
                   </div>
                   <div class="col col-9">
@@ -91,8 +89,8 @@
                         </div>
                   </div>
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/1.png); background-position: center">
-                        <div class="block-body height-1">
+                     <div class="block" style="background-image:url(assets/1.png)">
+                        <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Latency scheduling in perception and control</a>
                            </h2>
@@ -101,7 +99,7 @@
                   </div>
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-1">
+                        <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Dynamic consensus in multi-robot systems</a>
                            </h2>
@@ -110,7 +108,7 @@
                   </div>
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-1">
+                        <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Multi-rotor motion planning</a>
                            </h2>
@@ -119,7 +117,7 @@
                   </div>
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-1">
+                        <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Predefined-time stability: control and differentiation</a>
                            </h2>
@@ -128,7 +126,7 @@
                   </div>
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-1">
+                        <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Digital communications</a>
                            </h2>
@@ -137,7 +135,7 @@
                   </div>
                   <div class="col col-6">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-1">
+                        <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Patents</a>
                            </h2>
@@ -154,7 +152,7 @@
                   </div>
                   <div class="col col-4">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-1">
+                        <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Work experience</a>
                            </h2>
@@ -163,7 +161,7 @@
                   </div>
                   <div class="col col-4">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-1">
+                        <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Teaching</a>
                            </h2>
@@ -172,7 +170,7 @@
                   </div>
                   <div class="col col-4">
                      <div class="block" style="background-image:url(assets/1.png)">
-                        <div class="block-body height-1">
+                        <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Education</a>
                            </h2>
