--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </div>
                   </div>
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/Diapositiva1.png)">
+                     <div class="block" style="background-image:url(assets/3.png)">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Latency scheduling in perception and control</a>
@@ -98,7 +98,7 @@
                      </div>
                   </div>
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/Diapositiva2.png)">
+                     <div class="block" style="background-image:url(assets/4.png)">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Dynamic consensus in multi-robot systems</a>
@@ -107,7 +107,7 @@
                      </div>
                   </div>
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/Diapositiva3.png)">
+                     <div class="block" style="background-image:url(assets/5.png)">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Multi-rotor motion planning</a>
@@ -116,7 +116,7 @@
                      </div>
                   </div>
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/Diapositiva4.png)">
+                     <div class="block" style="background-image:url(assets/6.png)">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Predefined-time stability: control and differentiation</a>
@@ -125,7 +125,7 @@
                      </div>
                   </div>
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/Diapositiva5.png)">
+                     <div class="block" style="background-image:url(assets/7.png)">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Digital communications</a>
@@ -134,7 +134,7 @@
                      </div>
                   </div>
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/Diapositiva6.png)">
+                     <div class="block" style="background-image:url(assets/8.png)">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="custom"  href="quads.html">Patents</a>
