--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                         </div>
                   </div>
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/3.png)">
+                     <div class="block" style="background-image:url(assets/3.png); background-position: center">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="custom"  href="quads.html">Latency scheduling in perception and control</a>
+                              <a class="post-link blocks"  href="quads.html">Latency scheduling in perception and control</a>
                            </h2>
                         </div>
                      </div>
@@ -101,7 +101,7 @@
                      <div class="block" style="background-image:url(assets/4.png)">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="custom"  href="quads.html">Dynamic consensus in multi-robot systems</a>
+                              <a class="post-link blocks"  href="quads.html">Dynamic consensus in multi-robot systems</a>
                            </h2>
                         </div>
                      </div>
@@ -110,7 +110,7 @@
                      <div class="block" style="background-image:url(assets/5.png)">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="custom"  href="quads.html">Multi-rotor motion planning</a>
+                              <a class="post-link blocks"  href="quads.html">Multi-rotor motion planning</a>
                            </h2>
                         </div>
                      </div>
@@ -119,7 +119,7 @@
                      <div class="block" style="background-image:url(assets/6.png)">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="custom"  href="quads.html">Predefined-time stability: control and differentiation</a>
+                              <a class="post-link blocks"  href="quads.html">Predefined-time stability: control and differentiation</a>
                            </h2>
                         </div>
                      </div>
@@ -128,7 +128,7 @@
                      <div class="block" style="background-image:url(assets/7.png)">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="custom"  href="quads.html">Digital communications</a>
+                              <a class="post-link blocks"  href="quads.html">Digital communications</a>
                            </h2>
                         </div>
                      </div>
@@ -137,7 +137,7 @@
                      <div class="block" style="background-image:url(assets/8.png)">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="custom"  href="quads.html">Patents</a>
+                              <a class="post-link blocks"  href="quads.html">Patents</a>
                            </h2>
                         </div>
                      </div>
@@ -154,7 +154,7 @@
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="custom"  href="quads.html">Work experience</a>
+                              <a class="post-link blocks"  href="quads.html">Work experience</a>
                            </h2>
                         </div>
                      </div>
@@ -163,7 +163,7 @@
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="custom"  href="quads.html">Teaching</a>
+                              <a class="post-link blocks"  href="quads.html">Teaching</a>
                            </h2>
                         </div>
                      </div>
@@ -172,7 +172,7 @@
                      <div class="block" style="background-image:url(assets/1.png)">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="custom"  href="quads.html">Education</a>
+                              <a class="post-link blocks"  href="quads.html">Education</a>
                            </h2>
                         </div>
                      </div>
