--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </div>
                   </div>
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/3.png); background-position: center">
+                     <div class="block" style="background-image:url(assets/3.png); background-position: center; background-size: 50%;">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="post-link blocks"  href="quads.html">Latency scheduling in perception and control</a>
