--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                <br><br><br><br><br>
                <div class="col col-12">
                   <div class="col col-3">
-                     <div class="block glass"> <img alt="avatar" src="assets/avatar.png" >
-                     </div>
+                     <div class="block" style="background-image:url(assets/avatar.png); background-position: center; background-size: 70%; opacity:1;"></div>
                   </div>
                   <div class="col col-9">
                      <div class="block Cgrey">
