--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         </div>
                   </div>
                   <div class="col col-4">
-                     <div class="block" style="background-image:url(assets/1.png)">
+                     <div class="block Cgreen">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="post-link blocks"  href="quads.html">Work experience</a>
@@ -159,7 +159,7 @@
                      </div>
                   </div>
                   <div class="col col-4">
-                     <div class="block" style="background-image:url(assets/1.png)">
+                     <div class="block Cblue">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="post-link blocks"  href="quads.html">Teaching</a>
@@ -168,7 +168,7 @@
                      </div>
                   </div>
                   <div class="col col-4">
-                     <div class="block" style="background-image:url(assets/1.png)">
+                     <div class="block Cred"">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="post-link blocks"  href="quads.html">Education</a>
