--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
             <div class="home">
                <br><br><br><br><br>
                <div class="col col-12">
-                  <div class="col col-3"style="background-image:url(assets/avatar.png); background-position: center; background-size: 100%; opacity:1;">
-                     
+                  <div class="col col-3">
+                     <div class="block" style="background-image:url(assets/avatar.png); background-position: center; background-size: 100%; opacity:1;"></div>
                   </div>
                   <div class="col col-9">
                      <div class="block Cgrey">
                         <div class="block-body">
                            <h2>Hi! I am Rodrigo Aldana-López.</h2>
-                           <p class="black-text">I am currently a Ph.D. student at the <a class="begin-block" href="http://diis.unizar.es/en/PhD_eng" >University of Zaragoza,</a> studying the effects and scheduling of perception latency in robotic systems with multiple agents. My interests lie in the intersection between learning, control and information theory. Previously, I worked at the multi-agent autonomous systems laboratory at <a class="begin-block" href="https://www.intel.es/content/www/es/es/research/overview.html" >Intel Labs.</a> I am very passionate about math-related topics in robotics and technology in general. I enjoy discussing and learning new stuff. Feel free to contact me about any of my work, or if you want to discuss something new!
+                           <p class="black-text">I am currently a Ph.D. student at the <a class="begin-block" href="http://diis.unizar.es/en/PhD_eng" >University of Zaragoza,</a> studying the effects and scheduling of perception latency in robotic systems with multiple agents. My interests lie in the intersection between learning, control and information theory. Previously, I worked at the multi-agent autonomous systems laboratory at <a class="begin-block" href="https://www.intel.es/content/www/es/es/research/overview.html" >Intel Labs.</a> Feel free to contact me about any of my work, or if you want to discuss something new!
                            <center>
                               <a href="mailto:rodrigo.aldana.lopez@gmail.com">
                               <img alt="email" src="assets/gmail.png" width="38" height="25">
