--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <div class="col col-9">
                      <div class="block Cgrey">
                         <div class="block-body">
-                           <h2>Hi! I am Rodrigo Aldana-López.</h2>
+                           <h2>Hi, I am Rodrigo Aldana-López.</h2>
                            <p class="black-text">I am currently a Ph.D. student at the <a class="begin-block" href="http://diis.unizar.es/en/PhD_eng" >University of Zaragoza,</a> studying the effects and scheduling of perception latency in robotic systems with multiple agents. My interests lie in the intersection between learning, control and information theory. Previously, I worked at the multi-agent autonomous systems laboratory at <a class="begin-block" href="https://www.intel.es/content/www/es/es/research/overview.html" >Intel Labs.</a> Feel free to contact me about any of my work, or if you want to discuss something new!
                            <center>
                               <a href="mailto:rodrigo.aldana.lopez@gmail.com">
