--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             <div class="home">
                <br><br><br><br><br>
                <div class="col col-12">
-                  <div class="col col-3">
-                     <div class="block" style="background-image:url(assets/avatar.png); background-position: center; background-size: 100%; opacity:1;"></div>
-                  </div>
+      <div class="col col-3">
+          <div class="block glass"> <img alt="avatar" src="assets/avatar.png" >
+          </div>
                   <div class="col col-9">
                      <div class="block Cgrey">
                         <div class="block-body">
