--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                <div class="col col-12">
       <div class="col col-3">
           <div class="block glass"> <img alt="avatar" src="assets/avatar.png" >
-          </div>
+          </div></div>
                   <div class="col col-9">
                      <div class="block Cgrey">
                         <div class="block-body">
