--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                      <div class="block Cred"">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="post-link blocks"  href="quads.html">Education</a>
+                              <a class="post-link blocks"  href="education.html">Education</a>
                            </h2>
                         </div>
                      </div>
