--- a/education.html
+++ b/education.html
@@ -43,7 +43,7 @@
                      </div>
                      <div class="timeline-panel">
                         <div class="timeline-heading">
-                           <h4>2013 - 2015</h4>
+                           <h4>2019 - Today</h4>
                            <h3>
                               <p class="blue-text"><span class="big">Ph.D. in Systems Engineering and Computer Science</span></p>
                            </h3>
@@ -71,7 +71,7 @@
                      </div>
                      <div class="timeline-panel">
                         <div class="timeline-heading">
-                           <h4>2009 - 2013</h4>
+                           <h4>2012 - 2015</h4>
                            <h4 class="subheading">
                               <p class="blue-text"><span class="big">Bachelor in Electrical Engineering</span></p>
                            </h4>
