--- a/education.html
+++ b/education.html
@@ -67,7 +67,7 @@
                      timeline-inverted
                      ">
                      <div class="timeline-image">
-                        <img class="img-circle img-responsive" src="assets/education/iteso.jpg" alt="iteso_logo">
+                        <img class="img-circle img-responsive" src="assets/education/iteso.png" alt="iteso_logo">
                      </div>
                      <div class="timeline-panel">
                         <div class="timeline-heading">
