--- a/index.html
+++ b/index.html
@@ -73,49 +73,17 @@
                   </div>
                </div>
                <div class="col col-12">
-                  <div class="col col-12">
-                     <div class="block-body">
-                        <h2 align="center">Publications by area</h2>
-                     </div>
-                  </div>
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/3.png); background-position: center; background-size: 75%; opacity:1;">
+                     <div class="block" style="background-image:url(assets/1.png); background-position: center; background-size: 75%; opacity:1;">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="post-link blocks"  href="quads.html">Latency scheduling in perception and control</a>
+                              <a class="post-link blocks"  href="quads.html">Publications</a>
                            </h2>
                         </div>
                      </div>
                   </div>
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/4.png); background-position: center; background-size: 75%; opacity:1;">
-                        <div class="block-body height-2">
-                           <h2 align="center">
-                              <a class="post-link blocks"  href="quads.html">Dynamic consensus in multi-robot systems</a>
-                           </h2>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/5.png); background-position: center; background-size: 75%; opacity:1;">
-                        <div class="block-body height-2">
-                           <h2 align="center">
-                              <a class="post-link blocks"  href="quads.html">Multi-rotor motion planning</a>
-                           </h2>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/6.png); background-position: center; background-size: 75%; opacity:1;">
-                        <div class="block-body height-2">
-                           <h2 align="center">
-                              <a class="post-link blocks"  href="quads.html">Predefined-time stability: control and differentiation</a>
-                           </h2>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/7.png); background-position: center; background-size: 75%; opacity:1;">
+                     <div class="block Cred">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="post-link blocks"  href="quads.html">Patents</a>
@@ -123,23 +91,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/8.png); background-position: center; background-size: 75%; opacity:1;">
-                        <div class="block-body height-2">
-                           <h2 align="center">
-                              <a class="post-link blocks"  href="quads.html">Digital communications</a>
-                           </h2>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="col col-12">
-                  <div class="col col-12">
-                     <div class="block-body">
-                        <h2 align="center">Trajectory</h2>
-                     </div>
-                  </div>
-                  <div class="col col-4">
+                  <div class="col col-3">
                      <div class="block Cgreen">
                         <div class="block-body height-2">
                            <h2 align="center">
@@ -148,8 +100,8 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col col-4">
-                     <div class="block Cblue">
+                  <div class="col col-6">
+                     <div class="block" style="background-image:url(assets/10.png); background-position: center; background-size: 75%; opacity:1;">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="post-link blocks"  href="quads.html">Teaching</a>
@@ -157,15 +109,15 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col col-4">
-                     <div class="block Cred"">
+                  <div class="col col-3">
+                     <div class="block Cgreen">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="post-link blocks"  href="education.html">Education</a>
+                              <a class="post-link blocks"  href="quads.html">Education</a>
                            </h2>
                         </div>
                      </div>
-                  </div>
+                  </div>              
                </div>
             </div>
          </div>
