--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                      </div>
                   </div>
                   <div class="col col-6">
-                     <div class="block" style="background-image:url(assets/10.png); background-position: center; background-size: 75%; opacity:1;">
+                     <div class="block" style="background-image:url(assets/10.jpeg); background-position: center; background-size: 75%; opacity:1;">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="post-link blocks"  href="quads.html">Teaching</a>
@@ -110,7 +110,7 @@
                      </div>
                   </div>
                   <div class="col col-3">
-                     <div class="block Cgreen">
+                     <div class="block Cblue">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="post-link blocks"  href="quads.html">Education</a>
