--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                      </div>
                   </div>
                   <div class="col col-3">
-                     <div class="block Cblue">
+                     <div class="block Cpurple">
                         <div class="block-body height-2">
                            <h2 align="center">
                               <a class="post-link blocks"  href="quads.html">Education</a>
