--- a/carrer.html
+++ b/carrer.html
@@ -133,7 +133,7 @@
 
                   <li class="
                     
-                      timeline-inverted
+                      timeline
                     
                   ">
                       <div class="timeline-image">
