--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                      <div class="block Cgreen">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="post-link blocks"  href="carrer.html">Work experience</a>
+                              <a class="post-link blocks"  href="career.html">Work experience</a>
                            </h2>
                         </div>
                      </div>
