--- a/career.html
+++ b/career.html
@@ -117,7 +117,7 @@
                       </div>
                       <div class="timeline-panel">
                           <div class="timeline-heading">
-                              <h4><span class="small-capitals">2015</span>2016</h4>
+                              <h4><span class="small-capitals">2015</span> - 2016</h4>
                               <h4 class="subheading"><p class="blue-text"><span class="big">Research Intern (Electronics Department)</span></p></h4>
                           </div>
                           <div class="timeline-body">
