--- a/career.html
+++ b/career.html
@@ -88,7 +88,7 @@
                     
                   ">
                       <div class="timeline-image">
-                          <img class="img-circle img-responsive" src="assets/experience/freescale.jpg" alt="1">
+                          <img class="img-circle img-responsive" src="assets/experience/freescale.png" alt="1">
                       </div>
                       <div class="timeline-panel">
                           <div class="timeline-heading">
