--- a/career.html
+++ b/career.html
@@ -64,7 +64,7 @@
                       </div>
                       <div class="timeline-panel">
                           <div class="timeline-heading">
-                              <h4><span class="small-capitals">June 2014</span> - July 2019</h4>
+                              <h4><span class="small-capitals">June 2014 - July 2019</span></h4>
                               <h3><p class="blue-text"><span class="big">Autonomous Systems Engineer</span></p></h3>
                           </div>
                           <div class="timeline-body">
@@ -92,7 +92,7 @@
                       </div>
                       <div class="timeline-panel">
                           <div class="timeline-heading">
-                              <h4><span class="small-capitals">January 2015</span> - June 2015</h4>
+                              <h4><span class="small-capitals">January 2015 - June 2015 </span></h4>
                               <h4 class="subheading"><p class="blue-text"><span class="big">Embedded systems Intern</span></p></h4>
                           </div>
                           <div class="timeline-body">
@@ -117,7 +117,7 @@
                       </div>
                       <div class="timeline-panel">
                           <div class="timeline-heading">
-                              <h4><span class="small-capitals">2015</span> - 2016</h4>
+                              <h4><span class="small-capitals">2015 - 2016</span></h4>
                               <h4 class="subheading"><p class="blue-text"><span class="big">Research Intern (Electronics Department)</span></p></h4>
                           </div>
                           <div class="timeline-body">
