--- a/publications.html
+++ b/publications.html
@@ -52,6 +52,7 @@
 
                <div class="blog-short">
                   <h3 class="big">Generating new classes of fixed-time stable systems with predefined upper bound for the settling time</h3>
+				  <h2>Rodrigo Aldana-López, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan Diego Sánchez-Torres & Michael Defoort</h2>
                   <div>
                      <small>
                      <i class="fa fa-calendar"></i>
@@ -93,6 +94,27 @@
                </div>
                <br>
 
+
+               <div class="blog-short">
+                  <h3 class="big">A predefined-time first-order exact differentiator based on time-varying gains</h3>
+                  <div>
+                     <small>
+                     <i class="fa fa-calendar"></i>
+                     <time>
+                     May, 2021
+                     </time>
+                     </small>
+                  </div>
+                  <div class="imgcontainer col-xs-12 col-sm-4 col-md-3 col-lg-3">
+                     <img src="assets/publications/ral.png"
+                        alt="ral_paper"  class="pull-left img-responsive thumb img-thumbnail" />
+                  </div>
+                  <article class="excerpt">
+                     <p class="normal">Recently, there have been many advances in the algorithms required for autonomous navigation in unknown environments, such as mapping, collision avoidance, trajectory planning, and motion control. These components have been integrated into drones with high-end computers and graphics processors. However, further development is required to enable compute-constrained platforms with such autonomous navigation capabilities. To address this issue, in this paper, we present an autonomous navigation framework for reaching a goal in unknown three-dimensional cluttered environments. The framework consists of three main components. The first component is a computationally efficient method for mapping the environment from the disparity measurements obtained from a depth sensor. The second component is a stochastic approach to generate a path to a given goal, taking into account the field of view constraints on the space that is assumed to be safe for navigation. The third method is a fast algorithm for the online generation of motion plans, taking into account the robot's dynamic constraints, model and environmental uncertainty, and disturbances. We provide a qualitative and quantitative comparison with existing reaching a goal and exploration methods, showing the superior performance of our approach. Additionally, we present indoors and outdoors experiments using a robotic platform based on the Intel Ready to Fly drone kit, which represents the implementation, in the most computational constrained platform, of autonomous navigation in unknown cluttered environments demonstrated to date.</p>
+                  </article>
+                  <a class="pull-right marginBottom10" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21959">Read More</a>
+               </div>
+               <br>
 
          </div>
       </div>
